--- a/src/presentation/pages/Books/Books.module.css
+++ b/src/presentation/pages/Books/Books.module.css
@@ -1,9 +1,19 @@
 .root {
-  padding: 0 5%;
+  padding: 0 5% 100px 5%;
 }
 
 .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.headerLeft {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.content {
+  margin-top: 35px;
 }
